--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-resource": "1.2.16",
     "angular-sanitize": "1.2.16",
     "angular-animate": "1.2.16",
-    "angular-touch": "1.2.16"
+    "angular-touch": "1.2.16",
+    "normalize.css": "~3.0.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
