--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-sanitize": "1.2.16",
     "angular-animate": "1.2.16",
     "angular-touch": "1.2.16",
-    "normalize.css": "~3.0.1"
+    "normalize.css": "~3.0.1",
+    "angular-ui-router": "~0.2.10"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
