--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-animate": "1.2.16",
     "angular-touch": "1.2.16",
     "normalize.css": "~3.0.1",
-    "angular-ui-router": "~0.2.10"
+    "angular-ui-router": "~0.2.10",
+    "lodash": "~2.4.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
