--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-touch": "1.2.16",
     "normalize.css": "~3.0.1",
     "angular-ui-router": "~0.2.10",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "marked": "~0.3.2"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
