--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-ui-router": "~0.2.10",
     "lodash": "~2.4.1",
     "marked": "~0.3.2",
-    "angular-loading-bar": "~0.4.3"
+    "angular-loading-bar": "~0.4.3",
+    "ngstorage": "~0.3.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
