--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt-gh-pages": "^0.9.1",
     "grunt-google-cdn": "^0.4.0",
     "grunt-karma": "^0.8.3",
+    "grunt-manifest": "^0.4.0",
     "grunt-newer": "^0.7.0",
     "grunt-ngmin": "^0.0.3",
     "grunt-svgmin": "^0.4.0",
