--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
+    "bower": "^1.3.12",
     "grunt": "^0.4.1",
     "grunt-autoprefixer": "^0.7.3",
+    "grunt-cli": "^0.1.13",
     "grunt-concurrent": "^0.5.0",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-concat": "^0.4.0",
@@ -37,6 +39,9 @@
     "node": ">=0.10.0"
   },
   "scripts": {
+    "deploy": "grunt gh-pages",
+    "install": "bower install",
+    "start": "grunt serve",
     "test": "grunt test"
   }
 }
