--- a/package.json
+++ b/package.json
@@ -5,35 +5,36 @@
   "devDependencies": {
     "bower": "^1.3.12",
     "grunt": "^0.4.1",
-    "grunt-autoprefixer": "^0.7.3",
+    "grunt-autoprefixer": "^2.2.0",
     "grunt-cli": "^0.1.13",
-    "grunt-concurrent": "^0.5.0",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-concat": "^0.4.0",
-    "grunt-contrib-connect": "^0.7.1",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-cssmin": "^0.9.0",
+    "grunt-concurrent": "^1.0.0",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-cssmin": "^0.11.0",
     "grunt-contrib-htmlmin": "^0.3.0",
-    "grunt-contrib-imagemin": "^0.7.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.4.0",
+    "grunt-contrib-imagemin": "^0.9.2",
+    "grunt-contrib-jshint": "^0.11.0",
+    "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-filerev": "^0.2.1",
+    "grunt-filerev": "^2.1.2",
     "grunt-gh-pages": "^0.9.1",
     "grunt-google-cdn": "^0.4.0",
-    "grunt-karma": "^0.8.3",
+    "grunt-karma": "^0.10.1",
     "grunt-manifest": "^0.4.0",
-    "grunt-newer": "^0.7.0",
+    "grunt-newer": "^1.1.0",
     "grunt-ngmin": "^0.0.3",
-    "grunt-svgmin": "^0.4.0",
-    "grunt-usemin": "^2.1.1",
-    "grunt-wiredep": "^1.7.0",
-    "jshint-stylish": "^0.2.0",
+    "grunt-svgmin": "^2.0.0",
+    "grunt-usemin": "^3.0.0",
+    "grunt-wiredep": "^2.0.0",
+    "jasmine-core": "^2.2.0",
+    "jshint-stylish": "^1.0.0",
     "karma": "^0.12.17",
-    "karma-jasmine": "^0.1.5",
+    "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.1.4",
-    "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1"
+    "load-grunt-tasks": "^3.1.0",
+    "time-grunt": "^1.0.0"
   },
   "engines": {
     "node": ">=0.10.0"
