--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
     "deploy": "grunt gh-pages",
     "install": "bower install",
     "start": "grunt serve",
-    "test": "grunt test"
+    "test": "grunt"
   }
 }
