--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-ui-router": "~0.2.15",
     "lodash": "~3.10.0",
     "angular-loading-bar": "~0.8.0",
-    "ngstorage": "~0.3.0"
+    "ngstorage": "~0.3.0",
+    "angular-aria": "~1.4.1"
   },
   "devDependencies": {
     "angular-mocks": "1.4.1",
