--- a/bower.json
+++ b/bower.json
@@ -2,23 +2,23 @@
   "name": "faq",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "1.4.1",
+    "angular": "~1.4.3",
     "json3": "~3.3.1",
     "es5-shim": "~3.1.0",
-    "angular-resource": "1.4.1",
-    "angular-sanitize": "1.4.1",
-    "angular-animate": "1.4.1",
-    "angular-touch": "1.4.1",
+    "angular-resource": "~1.4.3",
+    "angular-sanitize": "~1.4.3",
+    "angular-animate": "~1.4.3",
+    "angular-touch": "~1.4.3",
     "normalize.css": "~3.0.1",
     "angular-ui-router": "~0.2.15",
     "lodash": "~3.10.0",
     "angular-loading-bar": "~0.8.0",
     "ngstorage": "~0.3.0",
-    "angular-aria": "~1.4.1"
+    "angular-aria": "~1.4.3"
   },
   "devDependencies": {
-    "angular-mocks": "1.4.1",
-    "angular-scenario": "1.4.1"
+    "angular-mocks": "~1.4.3",
+    "angular-scenario": "~1.4.3"
   },
   "appPath": "app"
 }
